--- a/raw.ui
+++ b/raw.ui
@@ -53,20 +53,42 @@
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+       <widget class="QPushButton" name="save_board">
+        <property name="maximumSize">
          <size>
-          <width>120</width>
-          <height>20</height>
+          <width>60</width>
+          <height>16777215</height>
          </size>
         </property>
-       </spacer>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{
+	background-color: #78D533 ;
+	color: white
+}</string>
+        </property>
+        <property name="text">
+         <string>SAVE</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="load_board">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{
+	background-color: #3393D5;
+	color: white;
+}</string>
+        </property>
+        <property name="text">
+         <string>LOAD</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
